Fix label toolbar overflow with LSF content

--- a/src/components/Label/Label.styl
+++ b/src/components/Label/Label.styl
@@ -37,20 +37,21 @@
     flex 1
     overflow auto
     box-sizing border-box
-    padding-bottom 50px
-    overflow auto
     padding-left 1em
+    display flex
+    flex-direction column
 
     &_mode
       &_explorer
         margin-top -13px
-        padding-top 13px
 
   &__lsf-container
     width 100%
     height 100%
     display flex
     flex-direction column
+    overflow-y auto
+    padding 0 16px 16px 0
 
   &__lsf-toolbar
     height 50px
