--- a/src/components/Label/Toolbar/Toolbar.styl
+++ b/src/components/Label/Toolbar/Toolbar.styl
@@ -1,12 +1,9 @@
 .label-toolbar
-  top 0
-  flex 1em
-  z-index 100
+  flex-shrink 0
   min-height 32px
   display flex
-  position sticky
   align-items center
-  padding 0 1em 13px
+  padding 13px 1em
   justify-content space-between
   background-color #f0f0f0
 
